--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "milligram": "^1.4.1",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.6.0",
+    "serverless": "^2.51.0",
+    "serverless-dotenv-plugin": "^3.9.0",
+    "serverless-single-page-app-plugin": "^1.0.2",
+    "serverless-webapp-deployments-plugin": "^1.0.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
