--- a/serverless.yml
+++ b/serverless.yml
@@ -2,18 +2,23 @@ service: webshop
 
 plugins:
   - serverless-single-page-app-plugin
-  - serverless-dotenv-plugin
+  # - serverless-dotenv-plugin
+  - serverless-s3-sync
 
 custom:
-  s3Bucket: webhsop-test-deployment2
-  distFolder: dist/webshop
-  dotenv:
-    useDotenv: true
+  # s3Bucket: cc-webshop-frontend
+  # s3LocalPath: 'dist/webshop/**'
+  # dotenv:
+    # useDotenv: true
+  bucket: cc-webshop-frontend
+  s3Sync:
+    - bucketName: cc-webshop-frontend
+      localDir: dist/webshop
+      acl: public-read
 
 provider:
   name: aws
   runtime: nodejs14.x
-
 
 
 resources:
@@ -22,7 +27,7 @@ resources:
     WebAppS3Bucket:
       Type: AWS::S3::Bucket
       Properties:
-        BucketName: ${self:custom.s3Bucket}
+        BucketName: ${self:custom.bucket}
         AccessControl: PublicRead
         WebsiteConfiguration:
           IndexDocument: index.html
@@ -40,14 +45,14 @@ resources:
               Principal: "*"
               Action:
               - s3:GetObject
-              Resource: arn:aws:s3:::${self:custom.s3Bucket}/*
+              Resource: arn:aws:s3:::${self:custom.bucket}/*
     ## Specifying the CloudFront Distribution to server your Web Application
     WebAppCloudFrontDistribution:
       Type: AWS::CloudFront::Distribution
       Properties:
         DistributionConfig:
           Origins:
-            - DomainName: ${self:custom.s3Bucket}.s3.amazonaws.com
+            - DomainName: ${self:custom.bucket}.s3.amazonaws.com
               ## An identifier for the origin which must be unique within the distribution
               Id: WebApp
               CustomOriginConfig:
