--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,8 @@ test:karma:
   stage: test
   image: trion/ng-cli-karma:${CLI_VERSION}
   allow_failure: false
+  before_script:
+    - npm ci
   script:
     - ng test --progress false --watch false
   tags:
@@ -36,6 +38,8 @@ test:e2e:
   stage: test
   image: trion/ng-cli-e2e:${CLI_VERSION}
   allow_failure: false
+  before_script:
+    - npm ci
   script:
     - ng e2e
   tags:
@@ -46,6 +50,8 @@ test:e2e:
 test:nglint:
   stage: test
   image: trion/ng-cli:${CLI_VERSION}
+  before_script:
+    - npm ci
   script:
     - ng lint
   tags:
