--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,17 +34,17 @@ test:karma:
     - angular
 
 
-test:e2e:
-  stage: test
-  image: trion/ng-cli-e2e:${CLI_VERSION}
-  allow_failure: false
-  before_script:
-    - npm ci
-  script:
-    - ng e2e
-  tags:
-    - frontend
-    - angular
+# test:e2e:
+#   stage: test
+#   image: trion/ng-cli-e2e:${CLI_VERSION}
+#   allow_failure: false
+#   before_script:
+#     - npm ci
+#   script:
+#     - ng e2e
+#   tags:
+#     - frontend
+#     - angular
 
 
 test:nglint:
