--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
     "milligram": "^1.4.1",
+    "ngx-toastr": "^14.0.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.6.0",
     "save": "^2.4.0",
