--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,9 +40,10 @@ deploy:
   #   - master
   before_script:
     - npm install
-    - npm install serverless
+    - npm install -g serverless
     - npm install serverless-single-page-app-plugin
     - npm install serverless-s3-sync
+    - ng build
   script:
     - serverless s3sync
   tags:
