--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,6 +47,8 @@ deploy:
     - ng build
   script:
     - serverless s3sync
+  before_script:
+    - serverless domainInfo
   tags:
     - frontend
     - angular
