--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "bcryptjs": "^2.4.3",
+    "crypto-browserify": "^3.12.0",
     "jwt-decode": "^2.2.0",
     "milligram": "^1.4.1",
     "ngx-loading": "^8.0.0",
@@ -50,5 +52,8 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.3.5"
+  },
+  "browser": {
+    "crypto": false
   }
 }
