--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,4 +47,4 @@ clear_cloudfront_cache:
     - master
   image: registry.gitlab.com/gitlab-org/cloud-deploy/aws-base:latest
   script:
-    - aws cloudfront create-invalidation --distribution-id E2JV8CIUEA5Y6P --paths "/*"
+    - aws cloudfront create-invalidation --distribution-id E3GW6KP1CTKLVC --paths "/*"
